--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ simply random.
 <p>The chart below shows the income per person in the United Kingdom between 1900 and 2000. 
 This chart is most likely midleading as it does not seem to account for inflation.
 </p>
-<img src="incomePerPersonUK.png" alt="Income Per Person in the United Kingdom from 1900 to 2000" height=400 width=1000>
+<img src="IncomePerPersonUK.png" alt="Income Per Person in the United Kingdom from 1900 to 2000" height=400 width=1000>
 
 <h3>Logarithmic Scale</h3>
 <p>A logarithm scale can be used for data visualization to show tge rate of change over time.
