--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <body>
 <h1>Revealing Change</h1>
-List and describe at least 3 techniques that 
-Cairo uses to highlight the meaningful changes 
-in data visualizations.
+<p>In chapter 8, Cario discusess several techniques to highlight meaningful changes in data 
+visualization. Below are some types of charts and things to consider when creating data visualizations.
+</p>
 
 
 <h3>Time Series Line Charts</h3>
